dataset1235/2025-2/805158916/users/1514794398/executions/71079933_3788368433.log
== SUBMISSION (2025-08-11 16:54:41)
-- CODE: 
vr=input()

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 16:54:47)
-- CODE: 
vr=input()

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 16:51:48)
-- CODE: 
vr=input()

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 16:54:30)
-- CODE: 
vr=input()

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 16:55:56)
-- CODE: 
var=input('leia um nome')

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
leia um nomeGandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
leia um nomeDonald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
leia um nomePython
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
leia um nomeAda Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
leia um nomeTeste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 16:56:38)
-- CODE: 
var=input('leia um nome ')

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
leia um nome Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
leia um nome Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
leia um nome Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
leia um nome Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
leia um nome Teste
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 16:51:51)
-- CODE: 
vr=input()

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== RUN (2025-08-11 16:53:02)
-- CODE: 
vr=input()

print(var)

-- EXECUTION TIME: 
0.0
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
-- ERROR:
Traceback (most recent call last):
  File "XXXX", line 3, in <module>
    print(var)
          ^^^
NameError: name 'var' is not defined. Did you mean: 'vr'?
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMISSION (2025-08-11 16:56:54)
-- CODE: 
var=input('leia um nome ')

print(var)

-- EXECUTION TIME: 
0.01
-- TEST CASE 1:
---- input:
Gandalf
---- correct output:
Gandalf
---- user output:
leia um nome Gandalf
-- TEST CASE 2:
---- input:
Donald Knuth
---- correct output:
Donald Knuth
---- user output:
leia um nome Donald Knuth
-- TEST CASE 3:
---- input:
Python
---- correct output:
Python
---- user output:
leia um nome Python
-- TEST CASE 4:
---- input:
Ada Lovelace
---- correct output:
Ada Lovelace
---- user output:
leia um nome Ada Lovelace
-- TEST CASE 5:
---- input:
Teste
---- correct output:
Teste
---- user output:
leia um nome Teste
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
